build: ensure compatibility with Java 8 environment